Assignment fixes